<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alabaster"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingTop="5dp"
    android:paddingRight="25dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_activity_iv_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/number_icon"
        app:srcCompat="@drawable/ic_number" />

    <TextView
        android:id="@+id/main_activity_tv_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/placeholder_number"
        android:textAlignment="center"
        android:textColor="@color/charleston_green"
        android:textSize="72sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/main_activity_et_number_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="2"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/ubuntu_bold"
            android:hint="@string/input_hint"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="@color/charleston_green"
            android:textColorHint="@color/charleston_green"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/main_activity_bt_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/charleston_green"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/button_text"
            android:textColor="@color/alabaster"
            tools:ignore="TouchTargetSizeCheck,VisualLintButtonSize,VisualLintBounds" />
    </LinearLayout>

    <Button
        android:id="@+id/main_activity_bt_random_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/charleston_green"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/random_button_text"
        android:textAlignment="center"
        android:textColor="@color/alabaster"
        tools:ignore="VisualLintButtonSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/main_activity_bt_decrement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/antique_ruby"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/decrement_button_text"
            android:textColor="@color/alabaster"
            tools:ignore="TouchTargetSizeCheck,VisualLintButtonSize,VisualLintBounds" />

        <EditText
            android:id="@+id/main_activity_et_interval"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="3"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/ubuntu_bold"
            android:hint="@string/placeholder_interval"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="@color/charleston_green"
            android:textColorHint="@color/charleston_green"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/main_activity_bt_increment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/antique_ruby"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/increment_button_text"
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck,VisualLintButtonSize,VisualLintBounds" />
    </LinearLayout>

    <TextView
        android:id="@+id/main_activity_tv_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/placeholder_summary"
        android:textAlignment="center"
        android:textColor="@color/charleston_green"
        android:textSize="18sp" />
</LinearLayout>